--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ body {
             display: flex;
             justify-content: space-around;
             align-items: center;
-            position: sticky;
+            position: fixed;
             bottom: 0;
             width: 100%;
             background-color: #333;
